--- a/src/App.css
+++ b/src/App.css
@@ -77,24 +77,47 @@ body{
     font-weight: 400;
 }
 
-
-#songAvatar{
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    margin: 18px 0;
-    position: relative;
-    cursor: pointer;
-    animation: animateAvatar .5s linear infinite;
+.song__img {
+	position: relative;
+	margin: 20px auto;
+	display: block;
+	height: 250px;
+	width: 250px;
+	border-radius: 50%;
+	box-shadow: 5px 5px 32px rgba(0, 0, 0, 0.3);
+	z-index: 9;
 }
 
-@keyframes animateAvatar {
-    0%,100%{
-        transform: scale(1);
-    }
-    50%{
-        transform: scale(1.03);
-    }
+.song__img::after {
+	content: "";
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	height: 40%;
+	width: 40%;
+	border-radius: 50%;
+	background: rgba(255, 255, 255, 0.8);
+	backdrop-filter: blur(20px);
+	-webkit-backdrop-filter: blur(20px);
+	z-index: 12;
+}
+
+.song__img img {
+	height: 100%;
+	width: 100%;
+	border-radius: 50%;
+	object-fit: cover;
+	animation: rotation 3s linear infinite;
+}
+
+@keyframes rotation {
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(359deg);
+	}
 }
 
 .musicTimerDiv{
